<resources>
    <string name="app_name">WalkIndoor</string>
    <string name="a_adir_nota">Añadir Nota</string>
    <string name="crear_nuevo_mapa">➕ Crear Nuevo Mapa</string>
    <string name="bienvenido_a_walkindoor">Bienvenido a WalkIndoor</string>
    <string name="buscar_mapas_guardados">🔍 Buscar Mapas Guardados</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="guardar_mapa">Guardar Mapa</string>
    <string name="centrar_mapa">Centrar Mapa</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
</resources>